--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,9 @@
         "corejs": 3
       }
     ],
-    "@babel/preset-typescript"
+    ["@babel/preset-typescript", {
+      "allowDeclareFields": true
+    }]
   ],
   "plugins": [
     "@babel/plugin-transform-runtime"
