--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "paramera",
+  "name": "panamera",
   "version": "0.0.2",
-  "main": "dist/index.js",
+  "main": "dist/panamera.min.js",
   "license": "MIT",
   "author": "cuvee",
   "scripts": {
-    "dev": "rollup -w -c rollup.config.js --environment NODE_ENV:devlopment",
-    "build": "rollup -c rollup.config.js --environment NODE_ENV:production",
+    "dev": "node script/build.js --watch",
+    "build": "node script/build.js",
     "lint": "eslint src/**/* --ext tx,tsx",
     "lint-fix": "eslint src/**/* --ext ts,tsx --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "release": "standard-version",
-    "commit": "npx git-cz"
+    "commit": "npx git-cz",
+    "example": "nodemon server.js"
   },
   "husky": {
     "hooks": {
@@ -26,6 +27,7 @@
       "git add"
     ]
   },
+  "typings": "./lib",
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
@@ -34,12 +36,10 @@
     "@babel/preset-typescript": "^7.10.4",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
-    "@rollup/plugin-babel": "^5.1.0",
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.4.0",
-    "@rollup/plugin-typescript": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "babel-loader": "^8.1.0",
+    "chalk": "^4.1.0",
     "commitizen": "^4.1.2",
     "conventional-changelog-cli": "^2.0.34",
     "cz-conventional-changelog": "^3.2.0",
@@ -48,14 +48,18 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "nodemon": "^2.0.4",
+    "ora": "^4.1.0",
     "prettier": "^2.0.5",
-    "rollup": "^2.23.0",
-    "rollup-plugin-terser": "^6.1.0",
     "standard-version": "^8.0.2",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.1.1"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "3"
   }
 }
