--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@babel/runtime": "^7.11.2",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -52,6 +53,7 @@
     "ora": "^4.1.0",
     "prettier": "^2.0.5",
     "standard-version": "^8.0.2",
+    "terser-webpack-plugin": "^4.1.0",
     "tslib": "^2.0.0",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
@@ -60,6 +62,6 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "core-js": "3"
+    "core-js": "^3.6.5"
   }
 }
